testdata/invalid/type_alias_cycle.sol
star A = B;
star B = A;
